# rust-str-bench

./: .gitignore  Cargo.toml
src/: aligned_writer.rs  lib.rs  random_strings.rs
